--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Landing Page</title>
 </head>
+
 <body>
     <h1>The Landing Page</h1>
 
+    <main>
         <!-- TODO: Use this div for background image -->
-    <div>
-        <section>
-            <h2>Call to Action</h2> 
-            <p>sign up for out newsletter</p>
-            <form>
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Enter your email">
-                <button type="submit">Sign Up</button>
-            </form>
-        </section>
-    </div>
-    
+        <div>
+            <section>
+                <h2>Call to Action</h2>
+                <p>sign up for out newsletter</p>
+                <form>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="Enter your email">
+                    <button type="submit">Sign Up</button>
+                </form>
+            </section>
+        </div>
+    </main>
 </body>
+
 </html>
