add a tags to main

--- a/index.html
+++ b/index.html
@@ -22,6 +22,38 @@
                     <button type="submit">Sign Up</button>
                 </form>
             </section>
+            <section>
+                <h2>Our Mission</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+                  voluptates, quod, quia, voluptate quae voluptatem quidem voluptas
+                  doloremque quos quibusdam nesciunt. Quisquam, quae. Quisquam, quae.
+                  Quisquam, quae. Quisquam, quae.
+                </p>
+                <a href="http://classic.mit.edu">Find out more</a>
+              </section>
+        
+              <section>
+                <h2>Our Team</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+                  voluptates, quod, quia, voluptate quae voluptatem quidem voluptas
+                  doloremque quos quibusdam nesciunt. Quisquam, quae. Quisquam, quae.
+                  Quisquam, quae. Quisquam, quae.
+                </p>
+                <a href="http://classic.mit.edu">Meet us</a>
+              </section>
+        
+              <section>
+                <h2>Our Services</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+                  voluptates, quod, quia, voluptate quae voluptatem quidem voluptas
+                  doloremque quos quibusdam nesciunt. Quisquam, quae. Quisquam, quae.
+                  Quisquam, quae. Quisquam, quae.
+                </p>
+                <a href="http://classic.mit.edu">What we provide</a>
+              </section>
         </div>
     </main>
 </body>
