Create contact form

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
                 </p>
                 <a href="http://classic.mit.edu">What we provide</a>
               </section>
+              <section>
+              <h2>Contact us</h2>
+              <form>
+                <label for="name">Name</label>
+                <input type="text" id=name placeholder="Name">
+                <label for="message">Comment</label>
+                <textarea type="text" id="comment" rows="5" col="30" placeholder="Something to say?"></textarea>
+                <button type="submit">Send</button>
+              </form>
+            </section>
         </div>
     </main>
 </body>
