--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
             </section>
         </div>
     </main>
+    <footer>
+        <small>
+            &copy;2022 <a href="http://www.google.come">Responsive Web Design</a>
+        </small>
+    </footer>
 </body>
 
 </html>
