Update contact form

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
               <form>
                 <label for="name">Name</label>
                 <input type="text" id=name placeholder="Name">
+                <label for="email">Email</label>
+                <input type="email" id="contact-email" placeholder="Enter your email">
+                <label for="phone">Phone</label>
+                <input type="tel" id="phone" placeholder="Enter your phone number">
                 <label for="message">Comment</label>
                 <textarea type="text" id="comment" rows="5" col="30" placeholder="Something to say?"></textarea>
                 <button type="submit">Send</button>
@@ -68,7 +72,7 @@
     </main>
     <footer>
         <small>
-            &copy;2022 <a href="http://www.google.come">Responsive Web Design</a>
+            &copy;2022 - The Landing Page
         </small>
     </footer>
 </body>
