--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <header class="text-center"><h1>The Landing Page</h1></header>
+  <header class="bg-primary"><h1 class="text-center">The Landing Page</h1></header>
 
   <main>
     <!-- TODO: Use this div for background image -->
