Adjust div on html, input and size hero image

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
   <main>
     <!-- TODO: Use this div for background image -->
-    <div>
-      <section>
+    <div id="hero">
         <h2>Call to Action</h2>
         <p>sign up for out newsletter</p>
         <form>
@@ -29,7 +28,7 @@
           <input type="email" id="email" placeholder="Enter your email">
           <button type="submit">Sign Up</button>
         </form>
-      </section>
+    </div>
       <section>
         <h2>Our Mission</h2>
         <p>
@@ -91,7 +90,7 @@
           <button type="submit">Send</button>
         </form>
       </section>
-    </div>
+    
   </main>
   <footer>
     <small>
