--- a/index.html
+++ b/index.html
@@ -5,92 +5,98 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="./index.css" />
+  <link rel="stylesheet" href="./index.css" />
 
   <title>The Landing Page</title>
 </head>
 
 <body>
-  <header class="bg-primary"><h1 class="text-center">The Landing Page</h1></header>
+  <header class="bg-primary">
+    <h1 class="text-center">The Landing Page</h1>
+  </header>
 
   <main>
-    <!-- TODO: Use this div for background image -->
-    <div id="hero">
-        <h2>Call to Action</h2>
-        <p>sign up for out newsletter</p>
-        <form>
-          <label for="email">Email</label>
+    <div id="hero" class="flex items-center justify-center flex-column">
+      <!-- Add translucent white-ish background w/ padding around this background area -->
+      <section class="bg-translucent-dark rounded">
+        <h2 class="text-center">Call to Action</h2>
+        <p>Sign up for out newsletter</p>
+        <form class="flex flex-column gap items-center">
+          <label for="email" class="sr-only">Email</label>
           <input type="email" id="email" placeholder="Enter your email">
-          <button type="submit">Sign Up</button>
+          <button type="submit" class="button button--submit">Sign Up</button>
         </form>
+      </section>
     </div>
-      <section>
-        <h2>Our Mission</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-          voluptates, quod, quia, voluptate quae voluptatem quidem voluptas
-          doloremque quos quibusdam nesciunt. Quisquam, quae. Quisquam, quae.
-          Quisquam, quae. Quisquam, quae.
-        </p>
-        <a href="http://classic.mit.edu">Find out more</a>
-      </section>
+    <section>
+      <h2>Our Mission</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+        voluptates, quod, quia, voluptate quae voluptatem quidem voluptas
+        doloremque quos quibusdam nesciunt. Quisquam, quae. Quisquam, quae.
+        Quisquam, quae. Quisquam, quae.
+      </p>
+      <a href="http://classic.mit.edu">Find out more</a>
+    </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-          voluptates, quod, quia, voluptate quae voluptatem quidem voluptas
-          doloremque quos quibusdam nesciunt. Quisquam, quae. Quisquam, quae.
-          Quisquam, quae. Quisquam, quae.
-        </p>
-        <a href="http://classic.mit.edu">Meet us</a>
-      </section>
+    <section>
+      <h2>Our Team</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+        voluptates, quod, quia, voluptate quae voluptatem quidem voluptas
+        doloremque quos quibusdam nesciunt. Quisquam, quae. Quisquam, quae.
+        Quisquam, quae. Quisquam, quae.
+      </p>
+      <a href="http://classic.mit.edu">Meet us</a>
+    </section>
 
-      <section>
-        <h2>Our Services</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-          voluptates, quod, quia, voluptate quae voluptatem quidem voluptas
-          doloremque quos quibusdam nesciunt. Quisquam, quae. Quisquam, quae.
-          Quisquam, quae. Quisquam, quae.
-        </p>
-        <a href="http://classic.mit.edu">What we provide</a>
-      </section>
-      <section>
-        <h2>Contact us</h2>
-        <form>
-          <label for="name">Name</label>
-          <input type="text" id=name placeholder="Name">
-          <label for="email">Email</label>
-          <input type="email" id="contact-email" placeholder="Enter your email">
-          <label for="phone">Phone</label>
-          <input type="tel" id="phone" placeholder="Enter your phone number">
-          <label for="message">Comment</label>
-          <textarea type="text" id="comment" rows="5" col="30" placeholder="Something to say?"></textarea>
+    <section>
+      <h2>Our Services</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+        voluptates, quod, quia, voluptate quae voluptatem quidem voluptas
+        doloremque quos quibusdam nesciunt. Quisquam, quae. Quisquam, quae.
+        Quisquam, quae. Quisquam, quae.
+      </p>
+      <a href="http://classic.mit.edu">What we provide</a>
+    </section>
+    <section>
+      <h2>Contact us</h2>
+      <form>
+        <label for="name">Name</label>
+        <input type="text" id=name placeholder="Name">
+        <label for="email">Email</label>
+        <input type="email" id="contact-email" placeholder="Enter your email">
+        <label for="phone">Phone</label>
+        <input type="tel" id="phone" placeholder="Enter your phone number">
+        <label for="message">Comment</label>
+        <textarea type="text" id="comment" rows="5" col="30" placeholder="Something to say?"></textarea>
 
-          <label for="hear-select">How did you hear about us?</label>
+        <label for="hear-select">How did you hear about us?</label>
 
-          <select name="pets" id="hear-select">
-            <option value="">--Please choose an option--</option>
-            <option value="dog">Dog</option>
-            <option value="cat">Cat</option>
-            <option value="hamster">Hamster</option>
-            <option value="parrot">Parrot</option>
-            <option value="spider">Spider</option>
-            <option value="goldfish">Goldfish</option>
-          </select>
-          <label for="interest">What's your level of interest in buying stuff?</label>
-          <input type="range" id="interest" name="interest" min="0" max="10" />
+        <select name="pets" id="hear-select">
+          <option value="">--Please choose an option--</option>
+          <option value="dog">Dog</option>
+          <option value="cat">Cat</option>
+          <option value="hamster">Hamster</option>
+          <option value="parrot">Parrot</option>
+          <option value="spider">Spider</option>
+          <option value="goldfish">Goldfish</option>
+        </select>
+        <label for="interest">What's your level of interest in buying stuff?</label>
+        <input type="range" id="interest" name="interest" min="0" max="10" />
 
-          <button type="submit">Send</button>
-        </form>
-      </section>
-    
+        <button type="submit">Send</button>
+      </form>
+    </section>
+
   </main>
   <footer>
     <small>
