--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- Add translucent white-ish background w/ padding around this background area -->
       <section class="bg-translucent-dark rounded">
         <h2 class="text-center">Call to Action</h2>
-        <p>Sign up for out newsletter</p>
+        <p class="text-center">Sign up for out newsletter</p>
         <form class="flex flex-column gap items-center">
           <label for="email" class="sr-only">Email</label>
           <input type="email" id="email" placeholder="Enter your email">
@@ -69,7 +69,7 @@
     </section>
     <section class="bg-primary text-center">
       <h2 class="m-0">Contact us</h2>
-      <form class="bg-primary flex flex-column gap">
+      <form class="bg-dark flex flex-column gap">
         <label for="name" class="sr-only">Name</label>
         <input type="text" id=name placeholder="Name" class="rounded">
         <label for="email" class="sr-only">Email</label>
