remove sr-only from hear-select

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <label for="message" class="sr-only">Comment</label>
         <textarea type="text" id="comment" rows="5" col="30" placeholder="Something to say?" class="rounded"></textarea>
 
-        <label for="hear-select" class="sr-only">How did you hear about us?</label>
+        <label for="hear-select">How did you hear about us?</label>
 
         <select name="pets" id="hear-select">
           <option value="">--Please choose an option--</option>
